[gd_scene load_steps=12 format=2]

[ext_resource path="res://scripts/SaveManager.gd" type="Script" id=1]
[ext_resource path="res://scripts/HUD.gd" type="Script" id=2]
[ext_resource path="res://scripts/GlobalEventManager.gd" type="Script" id=3]
[ext_resource path="res://sfx/music/temporaryMusic.mp3" type="AudioStream" id=4]
[ext_resource path="res://sprites/Archives/playerBar.png" type="Texture" id=5]
[ext_resource path="res://sprites/Archives/PlayerPortrait.png" type="Texture" id=6]
[ext_resource path="res://sprites/Player/giuratore.png" type="Texture" id=7]
[ext_resource path="res://sfx/wallHit.wav" type="AudioStream" id=8]
[ext_resource path="res://scenes/Player/Player.tscn" type="PackedScene" id=9]
[ext_resource path="res://scenes/UI/ChatBox.tscn" type="PackedScene" id=10]
[ext_resource path="res://scripts/DugeonSpawn.gd" type="Script" id=11]

[node name="World" type="YSort"]

[node name="DugeonSpawn" type="Node2D" parent="."]
script = ExtResource( 11 )

[node name="SaveManager" type="Node2D" parent="."]
script = ExtResource( 1 )

[node name="Player" parent="." instance=ExtResource( 9 )]
position = Vector2( 160, 91 )

[node name="BulletSounds" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = -80.0

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -25.0

[node name="HUD" type="CanvasLayer" parent="."]
script = ExtResource( 2 )

[node name="PortraitAndHealth" type="Control" parent="HUD"]
margin_left = 15.0
margin_top = 10.0
margin_right = 48.0
margin_bottom = 43.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Portrait" type="TextureRect" parent="HUD/PortraitAndHealth"]
margin_right = 32.0
margin_bottom = 32.0
texture = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HPBar" type="TextureProgress" parent="HUD/PortraitAndHealth/Portrait"]
margin_top = 32.0
margin_right = 32.0
margin_bottom = 64.0
rect_rotation = -90.0
value = 100.0
texture_progress = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="HUD/PortraitAndHealth/Portrait"]
margin_left = 6.0
margin_top = 6.0
margin_right = 26.0
margin_bottom = 26.0
texture = ExtResource( 7 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChatBox" parent="HUD" instance=ExtResource( 10 )]

[node name="GlobalEventManager" type="Node2D" parent="."]
script = ExtResource( 3 )

[node name="Node2D" type="Node2D" parent="."]
script = ExtResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 160, 90 )
current = true

[connection signal="messageEntered" from="GlobalEventManager" to="GlobalEventManager" method="_on_GlobalEventManager_messageEntered"]
[connection signal="playerHit" from="GlobalEventManager" to="Player" method="_on_GlobalEventManager_playerHit"]
[connection signal="playerHit" from="GlobalEventManager" to="HUD" method="_on_GlobalEventManager_playerHit"]
[connection signal="upgradePickedUp" from="GlobalEventManager" to="GlobalEventManager" method="_on_GlobalEventManager_upgradePickedUp"]
